Alteração do layout Issue 13

--- a/trunk/css/main.css
+++ b/trunk/css/main.css
@@ -104,7 +104,7 @@ input {
     font-size: .8em;
 }
 
-.recursos{
+.lateral{
     float: left;
     height: 80%;
     width: 15%;
